--- a/css/page.css
+++ b/css/page.css
@@ -61,9 +61,9 @@
 .post h2, .post h3, .post h4 {
     margin-bottom: 34px;
 }
-.post img {
+.img-left {
     float: left;
-    width: 190px;
+    width: 214px;
     margin: 5px 20px 20px 0;
 }
 .request-tutor {
