--- a/css/styles.css
+++ b/css/styles.css
@@ -136,3 +136,10 @@ header.masthead h1 {
   left: 0;
   opacity: 0.3;
 }
+
+.img-wrapper {
+    width: 100%;
+}
+.img-wrapper img {
+    width: 100%;
+}
