color scheme changed

--- a/css/nav.css
+++ b/css/nav.css
@@ -1,84 +1,84 @@
+/*nav*/
 .hidden {
-    display: none;
+  display: none;
 }
 
 .navbar {
-    display: block;
+  display: block;
 }
 
 .navbar i {
-    font-size: 20px;
-    margin-right: 0.8rem;
-    color: #00aaff;
+  font-size: 20px;
+  margin-right: 0.8rem;
+  color: #00aaff;
 }
 
 .navbar .tel i {
-    font-size: 25px;
+  font-size: 25px;
 }
 
 .navbar-holder {
-    z-index: 999;
-    margin-bottom: -147px;
-    color: #fff;
-    font-size: 18px;
-    padding: 0;
+  z-index: 999;
+  margin-bottom: -147px;
+  color: #fff;
+  font-size: 18px;
+  padding: 0;
 }
+
 .navbar-dark .navbar-nav .nav-link {
-    color: #fff;
+  color: #fff;
 }
 
 .navbar-holder a {
-    color: #fff;
+  color: #fff;
 }
 
 .navbar-brand {
-    max-width: 20%;
-    margin-left: -1rem;
+  max-width: 20%;
+  margin-left: -1rem;
 }
 
 .navbar-brand img {
-    width: 200px;
+  width: 200px;
 }
 
 .navbar-top {
-    font-size: 13px;
-    background-color: rgba(101, 0, 57, 0.85);
-    padding: 0;
+  font-size: 13px;
+  background-color: #284664;
+  padding: 0;
 }
 
 .navbar-top,
 .navbar-bottom {
-    display: block;
-    min-height: 25px;
-    margin: 0px auto;
+  display: block;
+  min-height: 25px;
+  margin: 0px auto;
 }
 
 .navbar-bottom {
-    font-weight: bold;
-}
-.navbar-bottom .nav-item {
-    margin: 0 24px;
+  font-weight: bold;
 }
 
-.navbar-dark .navbar-nav .active>.nav-link,
+.navbar-bottom .nav-item {
+  margin: 0 24px;
+}
+
+.navbar-dark .navbar-nav .active > .nav-link,
 .navbar-dark .navbar-nav .nav-link.active,
 .navbar-dark .navbar-nav .nav-link.show,
-.navbar-dark .navbar-nav .show>.nav-link {
-    color: #00aaff;
+.navbar-dark .navbar-nav .show > .nav-link {
+  color: #00aaff;
 }
 
 .navbar-dark .navbar-nav .nav-link:focus,
 .navbar-dark .navbar-nav .nav-link:hover {
-    color: #00aaff;
+  color: #00aaff;
 }
 
-.navbar-nav.search .nav-item {}
-
 .navbar-nav.contact .nav-item {
-    padding-right: 3em;
+  padding-right: 3em;
 }
 
 .bg-trans {
-    background: transparent;
+  background: transparent;
 }
-
