--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -15,6 +15,9 @@ $gray-900: #212529 !default;
 $black: #000 !default;
 
 $blue: #007bff !default;
+$blue-darker: #284664 !default;
+$blue-more-darker: #011b3a !default;
+$blue-lighter: #00aaff !default;
 $indigo: #6610f2 !default;
 $purple: #6f42c1 !default;
 $pink: #e83e8c !default;
@@ -25,8 +28,9 @@ $green: #28a745 !default;
 $teal: #20c997 !default;
 $cyan: #17a2b8 !default;
 
-$primary: $blue !default;
-$secondary: $gray-600 !default;
+$primary: $blue-darker !default;
+$secondary: $blue-lighter !default;
+$lightest-background: $white !default;
 $success: $green !default;
 $info: $cyan !default;
 $warning: $yellow !default;
