--- a/css-old/styles.css
+++ b/css-old/styles.css
@@ -1,5 +1,12 @@
+html, body {
+  font-size: 20px;
+  width: 100%;
+  height: 100%;
+}
+
 body {
   font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  color: #595959;
 }
 
 h1,
@@ -12,21 +19,33 @@ h6 {
   font-weight: 700;
 }
 
+h1 {
+  font-size: 2.1rem;
+}
+
+h4 {
+  font-size: 1.2rem;
+}
+
+h2 {
+  font-size: 1.8rem;
+}
+
 header.masthead {
   position: relative;
   background-color: #343a40;
-  background: url("../img/bg-masthead.jpg") no-repeat center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
   padding-top: 8rem;
   padding-bottom: 8rem;
+  height: 650px;
 }
 
 header.masthead .overlay {
   position: absolute;
-  background-color: #212529;
+  background-color: rgba(1, 27, 58, 0.4);
   height: 100%;
   width: 100%;
   top: 0;
@@ -120,7 +139,9 @@ header.masthead h1 {
   opacity: 0.3;
 }
 
-footer.footer {
-  padding-top: 4rem;
-  padding-bottom: 4rem;
+.img-wrapper {
+    width: 100%;
+}
+.img-wrapper img {
+    width: 100%;
 }
