--- a/css/page.css
+++ b/css/page.css
@@ -1,84 +1,101 @@
+/*page*/
 .page-header {
-    padding-top: 221px;
-    padding-bottom: 78px;
-    position: relative;
-    background-position: center center;
-    background: #011b3a;
-    background-size: cover;
+  padding-top: 221px;
+  padding-bottom: 78px;
+  position: relative;
+  background-position: center center;
+  background: #284664;
+  background-size: cover;
 }
+
 .page-header h1 {
-    font-weight: 300;
-    color: #fff;
-    margin-bottom: 33px;
+  font-weight: 300;
+  color: #fff;
+  margin-bottom: 33px;
 }
+
 .header-content {
-    text-align: left;
+  text-align: left;
 }
+
 .header-content .seperator, .seperator.left {
-    margin-left: 0;
+  margin-left: 0;
 }
+
 .breadcrumbs {
-    line-height: 24px;
-    font-size: 14px;
+  line-height: 24px;
+  font-size: 14px;
 }
+
 .breadcrumbs ul {
-    list-style: none;
-    color: #fff;
-    padding-left: 0;
+  list-style: none;
+  color: #fff;
+  padding-left: 0;
 }
+
 .breadcrumbs li {
-    display: inline;
+  display: inline;
 }
+
 .breadcrumbs li a {
-    color: #fff;
-    text-decoration: none;
+  color: #fff;
+  text-decoration: none;
 }
+
 .breadcrumbs li:not(:last-child):after {
-    content: '\003e';
-    position: relative; 
-    top: -2px; 
-    padding-right: 8px; 
-    padding-left: 8px;
-    color: #fff;
-  }
+  content: '\003e';
+  position: relative;
+  top: -2px;
+  padding-right: 8px;
+  padding-left: 8px;
+  color: #fff;
+}
+
 .page-content {
-    min-height: 520px;
-    padding-top: 80px;
-    padding-bottom: 100px;
+  min-height: 520px;
+  padding-top: 80px;
+  padding-bottom: 100px;
 }
+
 .post ul {
-    list-style: none;
+  list-style: none;
 }
+
 .page-header .overlay {
-    background-color: rgba(27,1,13,0.85);
-    /* background-color: rgba(101,0,57,0.75); */
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+  background-color: rgba(40, 70, 100, 0.8);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
+
 .post h2, .post h3, .post h4 {
-    margin-bottom: 34px;
+  margin-bottom: 34px;
 }
+
 .img-left {
-    float: left;
-    width: 214px;
-    margin: 5px 20px 20px 0;
+  float: left;
+  width: 214px;
+  margin: 5px 20px 20px 0;
 }
+
 .request-tutor {
-    width: 90%;
-    margin: auto;
+  width: 90%;
+  margin: auto;
 }
+
 .request-tutor .btn-blue {
-    color: #011b3a;
+  color: #011b3a;
 }
+
 aside.post {
-    border: 2px solid #00aaff;
-    padding-left: 15px;
-    padding-right: 15px;
-    padding-top: 35px;
+  border: 2px solid #00aaff;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 35px;
 }
+
 .gray {
-    background: #f8f8f8;
+  background: #f8f8f8;
 }
