--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,5 @@
 html, body {
   font-size: 20px;
-  width: 100%;
-  height: 100%;
 }
 
 body {
@@ -139,9 +137,973 @@ header.masthead h1 {
   opacity: 0.3;
 }
 
-.img-wrapper {
-    width: 100%;
+/*nav*/
+.hidden {
+  display: none;
 }
-.img-wrapper img {
-    width: 100%;
+
+.navbar {
+  display: block;
+}
+
+.navbar i {
+  font-size: 20px;
+  margin-right: 0.8rem;
+  color: #00aaff;
+}
+
+.navbar .tel i {
+  font-size: 25px;
+}
+
+.navbar-holder {
+  z-index: 999;
+  margin-bottom: -147px;
+  color: #fff;
+  font-size: 18px;
+  padding: 0;
+}
+
+.navbar-dark .navbar-nav .nav-link {
+  color: #fff;
+}
+
+.navbar-holder a {
+  color: #fff;
+}
+
+.navbar-brand {
+  max-width: 20%;
+  margin-left: -1rem;
+}
+
+.navbar-brand img {
+  width: 200px;
+}
+
+.navbar-top {
+  font-size: 13px;
+  background-color: #284664;
+  padding: 0;
+}
+
+.navbar-top,
+.navbar-bottom {
+  display: block;
+  min-height: 25px;
+  margin: 0px auto;
+}
+
+.navbar-bottom {
+  font-weight: bold;
+}
+
+.navbar-bottom .nav-item {
+  margin: 0 24px;
+}
+
+.navbar-dark .navbar-nav .active > .nav-link,
+.navbar-dark .navbar-nav .nav-link.active,
+.navbar-dark .navbar-nav .nav-link.show,
+.navbar-dark .navbar-nav .show > .nav-link {
+  color: #00aaff;
+}
+
+.navbar-dark .navbar-nav .nav-link:focus,
+.navbar-dark .navbar-nav .nav-link:hover {
+  color: #00aaff;
+}
+
+.navbar-nav.contact .nav-item {
+  padding-right: 3em;
+}
+
+.bg-trans {
+  background: transparent;
+}
+
+/*footer*/
+.footer {
+  background: #011b3a;
+  padding-bottom: 29px;
+}
+
+.widget {
+  line-height: 26px;
+  color: #fff;
+}
+
+.widget h4 {
+  margin-bottom: 35px;
+  font-weight: 300;
+  line-height: 30px;
+  color: rgba(255, 255, 255, 0.7);
+}
+
+.widget h4:after {
+  content: "";
+  display: block;
+  width: 50px;
+  border-bottom: 1px solid #650039;
+  margin-top: 12px;
+}
+
+.widget img {
+  width: 100%;
+}
+
+.img-cont {
+  margin-bottom: 2rem;
+}
+
+.contact-details {
+  font-size: 14px;
+  list-style: none;
+  padding-left: 0;
+  margin-bottom: 0;
+}
+
+.contact-details li {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  position: relative;
+  padding-left: 30px;
+  margin-bottom: 20px;
+  line-height: 20px;
+  color: #b2b2b2;
+}
+
+.contact-details li:before {
+  color: #00aaff;
+  font-family: FontAwesome;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  position: absolute;
+  left: 0;
+  top: 3px;
+  margin-right: 5px;
+  content: "\f0ac";
+}
+
+.contact-details li.telephone:before {
+  content: "\f095";
+}
+
+.contact-details li.email:before {
+  content: "\f003";
+}
+
+.contact-details li.schedule:before {
+  content: "\f017";
+}
+
+.footer .row.top {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.25);
+  margin-bottom: 27px;
+  padding-top: 46px;
+  padding-bottom: 46px;
+}
+
+.footer .bottom {
+  text-align: center;
+  font-size: 13px;
+  color: #808080;
+  width: 100%;
+}
+
+.footer .bottom a {
+  color: #fff;
+  text-decoration: none;
+}
+
+/*ball rolling*/
+.ball-rolling .icon-box {
+  margin-right: -10px;
+  margin-bottom: 30px;
+  min-height: 413px;
+  position: relative;
+  background: #fff;
+  padding: 40px;
+}
+
+.ball-rolling .icon-box .icon {
+  float: left;
+  font-size: 61px;
+}
+
+.ball-rolling .icon-box .icon img {
+  width: 1em;
+  display: inline-block;
+  height: auto;
+}
+
+.ball-rolling .icon-box .content {
+  overflow: hidden;
+  padding-left: 25px;
+  text-align: left;
+  font-size: 14px;
+  line-height: 24px;
+}
+
+.ball-rolling .icon-box .content p {
+  line-height: 24px;
+}
+
+.ball-rolling h4 {
+  font-size: 20px;
+  margin-top: -6px;
+  margin-bottom: 12px;
+  font-weight: 300;
+  line-height: 30px;
+  min-height: 90px;
+}
+
+.feature .btn-blue {
+  color: #011b3a;
+  font-size: 13px;
+}
+
+.feature .btn-blue i {
+  margin-left: 0.5rem;
+  font-size: 16px;
+}
+
+.btn-blue .arrow {
+  margin-left: 0.5rem;
+  font-size: 16px;
+}
+
+.ball-rolling .step {
+  position: absolute;
+  bottom: -14px;
+  right: -5px;
+  z-index: 1;
+  font-size: 120px;
+  font-weight: 900;
+  color: #f8f8f8;
+  line-height: 1;
+}
+
+.ball-rolling .desc {
+  min-height: 168px;
+}
+
+.fees ul {
+  list-style: none;
+  margin-bottom: 0;
+}
+
+.fees-list {
+  text-align: left;
+  margin-bottom: 30px;
+}
+
+/*page*/
+.page-header {
+  padding-top: 221px;
+  padding-bottom: 78px;
+  position: relative;
+  background-position: center center;
+  background: #284664;
+  background-size: cover;
+}
+
+.page-header h1 {
+  font-weight: 300;
+  color: #fff;
+  margin-bottom: 33px;
+}
+
+.header-content {
+  text-align: left;
+}
+
+.header-content .seperator, .seperator.left {
+  margin-left: 0;
+}
+
+.breadcrumbs {
+  line-height: 24px;
+  font-size: 14px;
+}
+
+.breadcrumbs ul {
+  list-style: none;
+  color: #fff;
+  padding-left: 0;
+}
+
+.breadcrumbs li {
+  display: inline;
+}
+
+.breadcrumbs li a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.breadcrumbs li:not(:last-child):after {
+  content: '\003e';
+  position: relative;
+  top: -2px;
+  padding-right: 8px;
+  padding-left: 8px;
+  color: #fff;
+}
+
+.page-content {
+  min-height: 520px;
+  padding-top: 80px;
+  padding-bottom: 100px;
+}
+
+.post ul {
+  list-style: none;
+}
+
+.page-header .overlay {
+  background-color: rgba(40, 70, 100, 0.8);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.post h2, .post h3, .post h4 {
+  margin-bottom: 34px;
+}
+
+.img-left {
+  float: left;
+  width: 214px;
+  margin: 5px 20px 20px 0;
+}
+
+.request-tutor {
+  width: 90%;
+  margin: auto;
+}
+
+.request-tutor .btn-blue {
+  color: #011b3a;
+}
+
+aside.post {
+  border: 2px solid #00aaff;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 35px;
+}
+
+.gray {
+  background: #f8f8f8;
+}
+
+/*home*/
+.btn {
+  border-radius: 0;
+}
+
+.btn-blue {
+  background-color: transparent;
+  border: 2px solid #00aaff;
+  min-width: 160px;
+  display: inline-block;
+  color: #fff;
+  line-height: 46px;
+  padding: 0 24px;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 400;
+}
+
+.btn-blue:hover {
+  color: #fff;
+  background-color: #00aaff;
+  border-color: #00aaff;
+}
+
+.masthead h1 {
+  font-weight: 400;
+}
+
+.feature {
+  position: relative;
+}
+
+.feature .container {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+
+.feature h2 {
+  margin-bottom: 34px;
+  color: #011b3a;
+}
+
+.feature.bg-dark h2 {
+  color: #fff;
+}
+
+p {
+  margin-bottom: 30px;
+  line-height: 30px;
+  color: #595959;
+}
+
+.seperator {
+  border-bottom: 2px solid #00aaff;
+  margin-bottom: 41px;
+  width: 60px;
+  height: 2px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.bg-dark {
+  color: #fff;
+}
+
+.icon-item {
+  padding: 40px;
+}
+
+.icon-box {
+  float: left;
+}
+
+.icon-box img {
+  width: 61px;
+}
+
+.icon-box-content {
+  padding-left: 25px;
+  position: relative;
+}
+
+.advantages {
+  background-image: url("/img/children-working-together.jpg");
+  background-size: cover;
+  background-position-y: -60px;
+}
+
+.section-overlay {
+  position: absolute;
+  background-color: rgba(40, 70, 100, 0.8);
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+}
+
+/*search*/
+.search-form {
+  position: relative;
+}
+
+.btn-search {
+  position: absolute;
+  top: 0;
+  right: 0;
+  background: transparent;
+  padding: 0;
+  height: 50px;
+  width: 50px;
+  border: none;
+  font-size: 16px;
+  color: rgba(255, 255, 255, 0.5);
+  z-index: 999;
+  cursor: pointer;
+}
+
+.search-form .cse .gsc-search-button-v2, .search-form .gsc-search-button-v2 {
+  display: none;
+}
+
+.search-form .gsc-input-box {
+  background: none;
+  border: none;
+}
+
+.search-form .gsc-search-box-tools .gsc-search-box .gsc-input {
+  background-color: transparent !important;
+}
+
+.search-form .gsc-search-box .gsc-input > input:focus,
+.search-form .gsc-input-box-focus {
+  border: none;
+  -moz-box-shadow: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  outline: none;
+}
+
+.btn-search:focus {
+  outline: none;
+}
+
+.btn-search i {
+  color: rgba(255, 255, 255, 0.5);
+}
+
+.navbar-top .search .search-container {
+  position: relative;
+  float: right;
+  background: transparent;
+  width: 50px;
+  height: 50px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-left: 15px;
+  padding-right: 15px;
+  border: none;
+  font-size: 13px;
+  color: #fff;
+  z-index: 1;
+  cursor: pointer;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.navbar-top .search .search-active {
+  width: 255px;
+  cursor: text;
+  background: rgba(255, 255, 255, 0.25);
+  padding-right: 50px;
+  border-radius: 0;
+}
+
+.navbar-top .search input::-webkit-input-placeholder {
+  /* WebKit, Blink, Edge */
+  color: rgba(255, 255, 255, 0);
+  /* opacity: 0.8;*/
+}
+
+.navbar-top .search input:-moz-placeholder {
+  /* Mozilla Firefox 4 to 18 */
+  color: rgba(255, 255, 255, 0);
+}
+
+.navbar-top .search input::-moz-placeholder {
+  /* Mozilla Firefox 19+ */
+  color: rgba(255, 255, 255, 0);
+}
+
+.navbar-top .search input:-ms-input-placeholder {
+  /* Internet Explorer 10-11 */
+  color: rgba(255, 255, 255, 0);
+}
+
+.navbar-top .search input::-ms-input-placeholder {
+  /* Microsoft Edge */
+  color: rgba(255, 255, 255, 0);
+}
+
+.navbar-top .search input::placeholder {
+  color: rgba(255, 255, 255, 0);
+}
+
+.navbar-top .search input.search-active::-webkit-input-placeholder {
+  /* WebKit, Blink, Edge */
+  color: rgba(255, 255, 255, 0.5);
+  /* opacity: 0.8;*/
+}
+
+.navbar-top .search input.search-active:-moz-placeholder {
+  /* Mozilla Firefox 4 to 18 */
+  color: rgba(255, 255, 255, 0.5);
+}
+
+.navbar-top .search input.search-active::-moz-placeholder {
+  /* Mozilla Firefox 19+ */
+  color: rgba(255, 255, 255, 0.5);
+}
+
+.navbar-top .search input.search-active:-ms-input-placeholder {
+  /* Internet Explorer 10-11 */
+  color: rgba(255, 255, 255, 0.5);
+}
+
+.navbar-top .search input.search-active::-ms-input-placeholder {
+  /* Microsoft Edge */
+  color: rgba(255, 255, 255, 0.5);
+}
+
+.navbar-top .search input.search-active::placeholder {
+  color: rgba(255, 255, 255, 0.5);
+}
+
+/*forms*/
+form {
+  margin-bottom: 2em;
+}
+
+.floating-label-form-group {
+  font-size: 14px;
+  position: relative;
+  margin-bottom: 0;
+  padding-bottom: 0;
+  border-bottom: 1px solid #dee2e6;
+}
+
+.floating-label-form-group input,
+.floating-label-form-group textarea {
+  font-size: 1.5em;
+  position: relative;
+  z-index: 1;
+  padding: 0;
+  resize: none;
+  border: none;
+  border-radius: 0;
+  background: none;
+  box-shadow: none !important;
+}
+
+.floating-label-form-group input::-webkit-input-placeholder,
+.floating-label-form-group textarea::-webkit-input-placeholder {
+  color: #868e96;
+}
+
+.floating-label-form-group label {
+  font-size: 0.85em;
+  line-height: 1.764705882em;
+  position: relative;
+  z-index: 0;
+  top: 2em;
+  display: block;
+  margin: 0;
+  -webkit-transition: top 0.3s ease, opacity 0.3s ease;
+  -moz-transition: top 0.3s ease, opacity 0.3s ease;
+  -ms-transition: top 0.3s ease, opacity 0.3s ease;
+  transition: top 0.3s ease, opacity 0.3s ease;
+  vertical-align: middle;
+  vertical-align: baseline;
+  opacity: 0;
+}
+
+.help-block {
+  margin: 15px 0;
+}
+
+.floating-label-form-group-with-value label {
+  top: 0;
+  opacity: 1;
+}
+
+.floating-label-form-group-with-focus label {
+  color: #00aaff;
+}
+
+form .form-group:first-child .floating-label-form-group {
+  border-top: 1px solid #dee2e6;
+}
+
+/*overrides*/
+.floating-label-form-group {
+  border: none;
+}
+
+.floating-label-form-group input,
+.floating-label-form-group textarea {
+  background: #fff;
+  border: 1px solid #e6e6e6;
+  padding: 3px 20px;
+  margin-bottom: 15px;
+  margin-top: 15px;
+}
+
+.form-group .form-control:focus {
+  border-color: #284664;
+}
+
+form {
+  margin-bottom: 0;
+}
+
+.help-block {
+  margin: 0;
+  margin-top: -30px;
+  margin-bottom: -30px;
+}
+
+.help-block ul {
+  margin-bottom: 0;
+}
+
+.your-contact {
+  margin-left: 2rem;
+}
+
+.your-contact h4 {
+  margin-bottom: 0;
+}
+
+.your-contact ul {
+  padding-left: 0;
+  overflow: hidden;
+  white-space: nowrap;
+  font-size: 0.9rem;
+}
+
+.your-contact li {
+  overflow: hidden;
+}
+
+.your-contact i {
+  font-size: 25px;
+  width: 2rem;
+  color: #284664;
+  font-weight: bold;
+  text-align: center;
+}
+
+.your-contact i.fa-mobile-phone {
+  font-size: 30px;
+}
+
+.your-contact .tel a,
+.map-contact .tel a {
+  color: #595959;
+  text-decoration: none;
+}
+
+.map {
+  height: 482px;
+  position: relative;
+  overflow: hidden;
+  background-image: url(/img/google-maps-xsml.jpg);
+  background-size: cover;
+}
+
+.map-container {
+  position: relative;
+  background: #fff;
+}
+
+.map-container .map-contact {
+  position: absolute;
+  top: 50%;
+  left: 5%;
+  margin-right: 15px;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+  z-index: 5;
+  width: 425px;
+  padding: 47px 52px 50px 52px;
+  background: #fff;
+}
+
+.map-contact ul {
+  list-style: none;
+  padding-left: 40px;
+}
+
+.map-contact .contact-list > li > i,
+.map-contact .contact-list > li > a > i {
+  font-size: 25px;
+  width: 2rem;
+  margin-left: -40px;
+  color: #284664;
+  font-weight: bold;
+  text-align: center;
+  padding-right: 5px;
+}
+
+.map-contact .email {
+  white-space: nowrap;
+}
+
+.socials-list {
+  line-height: 30px;
+  list-style: none;
+  padding-left: 0;
+  padding-top: 15px;
+  margin-bottom: -8px;
+}
+
+.socials-list li {
+  display: inline-block;
+  margin-top: 4px;
+  margin-right: 8px;
+  margin-bottom: 4px;
+  font-size: 18px;
+  vertical-align: middle;
+}
+
+.socials-list a {
+  position: relative;
+  display: block;
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 32px;
+  color: #fff;
+  background: #3a5897;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  opacity: 0.7;
+}
+
+.socials-list .facebook a {
+  background: #3a5897;
+}
+
+.socials-list .twitter a {
+  background: #00aced;
+}
+
+.socials-list .google a {
+  background: #db4437;
+}
+
+#success {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  z-index: 999;
+  background-color: #fff;
+}
+
+/**md and above**/
+@media (min-width: 992px) {
+  #contactForm {
+    /* margin-right: 5rem; */
+  }
+}
+
+/**request tutor**/
+.form-check {
+  min-width: 40%;
+}
+
+.form-group {
+  margin-bottom: 0.5em;
+}
+
+.control-group {
+  width: 100%;
+}
+
+.form-check-label {
+  white-space: nowrap;
+}
+
+.group-outline {
+  background: #fff;
+  border: 1px solid #e6e6e6;
+  padding: 9px 20px;
+  margin-top: 20px;
+}
+
+.group-label {
+  color: #535353;
+  display: block;
+  margin-bottom: 6px;
+  font-size: 13px;
+  font-weight: bold;
+}
+
+#contactForm .form-control::-webkit-input-placeholder {
+  /* WebKit, Blink, Edge */
+  color: #a7a7a7;
+  font-style: italic;
+  font-size: 16px;
+}
+
+#contactForm .form-control:-moz-placeholder {
+  /* Mozilla Firefox 4 to 18 */
+  color: #a7a7a7;
+  font-style: italic;
+}
+
+#contactForm .form-control::-moz-placeholder {
+  /* Mozilla Firefox 19+ */
+  color: #a7a7a7;
+  font-style: italic;
+}
+
+#contactForm .form-control:-ms-input-placeholder {
+  /* Internet Explorer 10-11 */
+  color: #a7a7a7;
+  font-style: italic;
+}
+
+#contactForm .form-control::-ms-input-placeholder {
+  /* Microsoft Edge */
+  color: #a7a7a7;
+  font-style: italic;
+}
+
+#contactForm .form-control::placeholder {
+  color: #a7a7a7;
+  font-style: italic;
+}
+
+.floating-label-form-group input,
+.floating-label-form-group textarea {
+  margin-top: 8px;
+}
+
+.floating-label-form-group label {
+  white-space: nowrap;
+}
+
+.narrow-form {
+  max-width: 540px;
+}
+
+.form-check label {
+  margin-right: 10px;
+  font-size: 14px;
+}
+
+.request-popup {
+  position: fixed;
+  background: #fff;
+  top: 45px;
+  left: 50%;
+  width: 540px;
+  z-index: 999;
+  margin-left: -270px;
+  border: 1px solid #e6e6e6;
+  box-shadow: 5px 5px 4px 5px rgba(0, 0, 0, 0.2);
+  -webkit-transition: all 1s ease;
+  transition: all 1s ease;
+}
+
+.form-header {
+  height: 30px;
+  color: #ccc;
+  width: 100%;
+  position: relative;
+  padding-top: 10px;
+}
+
+.form-header h3 {
+  font-size: 18px;
+  float: left;
+}
+
+.form-header i {
+  float: right;
+  height: 18px;
+  width: 18px;
+  cursor: pointer;
+}
+
+@media (min-width: 768px) {
+  .narrow-form {
+    max-width: 720px;
+  }
+  .request-popup {
+    width: 720px;
+    margin-left: -360px;
+  }
 }
