--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -9,4 +9,12 @@
 @import "icons.scss";
 @import "testimonials.scss";
 @import "call-to-action.scss";
-//@import "footer.scss";
+//customisations
+@import "nav.scss";
+@import "footer.scss";
+@import "ball-rolling.scss";
+@import "page.scss";
+@import "home.scss";
+@import "search.scss";
+@import "forms.scss";
+
