cookie consent color

--- a/scss/forms.scss
+++ b/scss/forms.scss
@@ -145,7 +145,7 @@ form {
 
 .map-container {
     position: relative;
-    background: #595959;
+    background: $lightest-background;
 }
 
 .map-container .map-contact {
