--- a/css/forms.css
+++ b/css/forms.css
@@ -136,8 +136,18 @@ form {
   height: 482px;
   position: relative;
   overflow: hidden;
+}
+
+.map-overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
   background-image: url(/img/google-maps-xsml.jpg);
   background-size: cover;
+  -webkit-transition: all 5s ease;
+  transition: all 5s ease;
 }
 
 .map-container {
