--- a/css/styles.css
+++ b/css/styles.css
@@ -181,21 +181,11 @@ header.masthead h1 {
   width: 200px;
 }
 
-.navbar-top {
-  font-size: 13px;
-  background-color: #284664;
-  padding: 0;
-}
-
-.navbar-top,
 .navbar-bottom {
   display: block;
+  font-weight: bold;
   min-height: 25px;
   margin: 0px auto;
-}
-
-.navbar-bottom {
-  font-weight: bold;
 }
 
 .navbar-bottom .nav-item {
@@ -220,6 +210,28 @@ header.masthead h1 {
 
 .bg-trans {
   background: transparent;
+}
+
+.navbar-top {
+  font-size: 13px;
+  background-color: #284664;
+  padding: 0;
+  min-height: 25px;
+  margin: 0px auto;
+  display: none;
+}
+
+.navbar-bottom {
+  background-color: #284664;
+}
+
+@media (min-width: 768px) {
+  .navbar-top {
+    display: block;
+  }
+  .navbar-bottom {
+    background: transparent;
+  }
 }
 
 /*footer*/
@@ -502,7 +514,11 @@ aside.post {
 }
 
 .gray {
-  background: #f8f8f8;
+  background: #f8f9fa;
+}
+
+.bulleted ul {
+  list-style: disc;
 }
 
 /*home*/
@@ -877,8 +893,18 @@ form {
   height: 482px;
   position: relative;
   overflow: hidden;
+}
+
+.map-overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
   background-image: url(/img/google-maps-xsml.jpg);
   background-size: cover;
+  -webkit-transition: all 5s ease;
+  transition: all 5s ease;
 }
 
 .map-container {
