--- a/css/page.css
+++ b/css/page.css
@@ -4,7 +4,7 @@
   padding-bottom: 78px;
   position: relative;
   background-position: center center;
-  background: #284664;
+  background: #011b3a;
   background-size: cover;
 }
 
@@ -62,7 +62,7 @@
 }
 
 .page-header .overlay {
-  background-color: rgba(40, 70, 100, 0.8);
+  background-color: rgba(1, 27, 58, 0.8);
   position: absolute;
   top: 0;
   left: 0;
