--- a/css/styles.css
+++ b/css/styles.css
@@ -214,7 +214,7 @@ header.masthead h1 {
 
 .navbar-top {
   font-size: 13px;
-  background-color: #284664;
+  background-color: #011b3a;
   padding: 0;
   min-height: 25px;
   margin: 0px auto;
@@ -222,7 +222,7 @@ header.masthead h1 {
 }
 
 .navbar-bottom {
-  background-color: #284664;
+  background-color: #011b3a;
 }
 
 @media (min-width: 768px) {
@@ -421,7 +421,7 @@ header.masthead h1 {
   padding-bottom: 78px;
   position: relative;
   background-position: center center;
-  background: #284664;
+  background: #011b3a;
   background-size: cover;
 }
 
@@ -479,7 +479,7 @@ header.masthead h1 {
 }
 
 .page-header .overlay {
-  background-color: rgba(40, 70, 100, 0.8);
+  background-color: rgba(1, 27, 58, 0.8);
   position: absolute;
   top: 0;
   left: 0;
@@ -611,7 +611,7 @@ p {
 
 .section-overlay {
   position: absolute;
-  background-color: rgba(40, 70, 100, 0.8);
+  background-color: rgba(1, 27, 58, 0.8);
   height: 100%;
   width: 100%;
   top: 0;
@@ -835,7 +835,7 @@ form .form-group:first-child .floating-label-form-group {
 }
 
 .form-group .form-control:focus {
-  border-color: #284664;
+  border-color: #011b3a;
 }
 
 form {
@@ -874,7 +874,7 @@ form {
 .your-contact i {
   font-size: 25px;
   width: 2rem;
-  color: #284664;
+  color: #011b3a;
   font-weight: bold;
   text-align: center;
 }
@@ -930,12 +930,16 @@ form {
   padding-left: 40px;
 }
 
+.map-contact li {
+  margin-bottom: 15px;
+}
+
 .map-contact .contact-list > li > i,
 .map-contact .contact-list > li > a > i {
   font-size: 25px;
   width: 2rem;
   margin-left: -40px;
-  color: #284664;
+  color: #011b3a;
   font-weight: bold;
   text-align: center;
   padding-right: 5px;
