--- a/css/forms.css
+++ b/css/forms.css
@@ -100,7 +100,8 @@ form {
 }
 
 .your-contact h4 {
-  margin-bottom: 0;
+  margin-bottom: 0.5rem;
+  margin-top: 0.5rem;
 }
 
 .your-contact ul {
@@ -108,6 +109,7 @@ form {
   overflow: hidden;
   white-space: nowrap;
   font-size: 0.9rem;
+  line-height: 1.8rem;
 }
 
 .your-contact li {
@@ -238,10 +240,10 @@ form {
 
 #success {
   position: absolute;
-  top: 0;
+  top: -50%;
   width: 100%;
   z-index: 999;
-  background-color: #fff;
+  background-color: transparent;
 }
 
 /**md and above**/
