updated search box text color

--- a/css/search.css
+++ b/css/search.css
@@ -29,6 +29,7 @@
 
 .search-form .gsc-search-box-tools .gsc-search-box .gsc-input {
   background-color: transparent !important;
+  color: rgba(255, 255, 255, 0.5);
 }
 
 .search-form .gsc-search-box .gsc-input > input:focus,
