--- a/css/search.css
+++ b/css/search.css
@@ -2,7 +2,6 @@
 .search-form {
   position: relative;
 }
-
 .btn-search {
   position: absolute;
   top: 0;
@@ -17,21 +16,18 @@
   z-index: 999;
   cursor: pointer;
 }
-
-.search-form .cse .gsc-search-button-v2, .search-form .gsc-search-button-v2 {
+.search-form .cse .gsc-search-button-v2,
+.search-form .gsc-search-button-v2 {
   display: none;
 }
-
 .search-form .gsc-input-box {
   background: none;
   border: none;
 }
-
 .search-form .gsc-search-box-tools .gsc-search-box .gsc-input {
   background-color: transparent !important;
   color: rgba(255, 255, 255, 0.5);
 }
-
 .search-form .gsc-search-box .gsc-input > input:focus,
 .search-form .gsc-input-box-focus {
   border: none;
@@ -40,15 +36,12 @@
   box-shadow: none;
   outline: none;
 }
-
 .btn-search:focus {
   outline: none;
 }
-
 .btn-search i {
   color: rgba(255, 255, 255, 0.5);
 }
-
 .navbar-top .search .search-container {
   position: relative;
   float: right;
@@ -67,7 +60,6 @@
   -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
 }
-
 .navbar-top .search .search-active {
   width: 255px;
   cursor: text;
@@ -75,63 +67,51 @@
   padding-right: 50px;
   border-radius: 0;
 }
-
 .navbar-top .search input::-webkit-input-placeholder {
   /* WebKit, Blink, Edge */
   color: rgba(255, 255, 255, 0);
   /* opacity: 0.8;*/
 }
-
 .navbar-top .search input:-moz-placeholder {
   /* Mozilla Firefox 4 to 18 */
   color: rgba(255, 255, 255, 0);
 }
-
 .navbar-top .search input::-moz-placeholder {
   /* Mozilla Firefox 19+ */
   color: rgba(255, 255, 255, 0);
 }
-
 .navbar-top .search input:-ms-input-placeholder {
   /* Internet Explorer 10-11 */
   color: rgba(255, 255, 255, 0);
 }
-
 .navbar-top .search input::-ms-input-placeholder {
   /* Microsoft Edge */
   color: rgba(255, 255, 255, 0);
 }
-
 .navbar-top .search input::placeholder {
   color: rgba(255, 255, 255, 0);
 }
-
 .navbar-top .search input.search-active::-webkit-input-placeholder {
   /* WebKit, Blink, Edge */
   color: rgba(255, 255, 255, 0.5);
   /* opacity: 0.8;*/
 }
-
 .navbar-top .search input.search-active:-moz-placeholder {
   /* Mozilla Firefox 4 to 18 */
   color: rgba(255, 255, 255, 0.5);
 }
-
 .navbar-top .search input.search-active::-moz-placeholder {
   /* Mozilla Firefox 19+ */
   color: rgba(255, 255, 255, 0.5);
 }
-
 .navbar-top .search input.search-active:-ms-input-placeholder {
   /* Internet Explorer 10-11 */
   color: rgba(255, 255, 255, 0.5);
 }
-
 .navbar-top .search input.search-active::-ms-input-placeholder {
   /* Microsoft Edge */
   color: rgba(255, 255, 255, 0.5);
 }
-
 .navbar-top .search input.search-active::placeholder {
   color: rgba(255, 255, 255, 0.5);
 }
