--- a/css/masthead.css
+++ b/css/masthead.css
@@ -7,6 +7,7 @@
 .body-font {
   font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
+/*masthead*/
 header.masthead {
   position: relative;
   background-color: #343a40;
