--- a/css/forms.css
+++ b/css/forms.css
@@ -1,8 +1,16 @@
+.background-cover {
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+.body-font {
+  font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
 /*forms*/
 form {
   margin-bottom: 2em;
 }
-
 .floating-label-form-group {
   font-size: 14px;
   position: relative;
@@ -10,7 +18,6 @@ form {
   padding-bottom: 0;
   border-bottom: 1px solid #dee2e6;
 }
-
 .floating-label-form-group input,
 .floating-label-form-group textarea {
   font-size: 1.5em;
@@ -23,12 +30,10 @@ form {
   background: none;
   box-shadow: none !important;
 }
-
 .floating-label-form-group input::-webkit-input-placeholder,
 .floating-label-form-group textarea::-webkit-input-placeholder {
   color: #868e96;
 }
-
 .floating-label-form-group label {
   font-size: 0.85em;
   line-height: 1.764705882em;
@@ -45,29 +50,23 @@ form {
   vertical-align: baseline;
   opacity: 0;
 }
-
 .help-block {
   margin: 15px 0;
 }
-
 .floating-label-form-group-with-value label {
   top: 0;
   opacity: 1;
 }
-
 .floating-label-form-group-with-focus label {
   color: #00aaff;
 }
-
 form .form-group:first-child .floating-label-form-group {
   border-top: 1px solid #dee2e6;
 }
-
 /*overrides*/
 .floating-label-form-group {
   border: none;
 }
-
 .floating-label-form-group input,
 .floating-label-form-group textarea {
   background: #fff;
@@ -76,34 +75,27 @@ form .form-group:first-child .floating-label-form-group {
   margin-bottom: 15px;
   margin-top: 15px;
 }
-
 .form-group .form-control:focus {
   border-color: #011b3a;
 }
-
 form {
   margin-bottom: 0;
 }
-
 .help-block {
   margin: 0;
   margin-top: -30px;
   margin-bottom: -30px;
 }
-
 .help-block ul {
   margin-bottom: 0;
 }
-
 .your-contact {
   margin-left: 2rem;
 }
-
 .your-contact h4 {
   margin-bottom: 0.5rem;
   margin-top: 0.5rem;
 }
-
 .your-contact ul {
   padding-left: 0;
   overflow: hidden;
@@ -111,11 +103,9 @@ form {
   font-size: 0.9rem;
   line-height: 1.8rem;
 }
-
 .your-contact li {
   overflow: hidden;
 }
-
 .your-contact i {
   font-size: 25px;
   width: 2rem;
@@ -123,23 +113,19 @@ form {
   font-weight: bold;
   text-align: center;
 }
-
 .your-contact i.fa-mobile-phone {
   font-size: 30px;
 }
-
 .your-contact .tel a,
 .map-contact .tel a {
   color: #595959;
   text-decoration: none;
 }
-
 .map {
   height: 482px;
   position: relative;
   overflow: hidden;
 }
-
 .map-overlay {
   position: absolute;
   width: 100%;
@@ -151,12 +137,10 @@ form {
   -webkit-transition: all 5s ease;
   transition: all 5s ease;
 }
-
 .map-container {
   position: relative;
   background: #fff;
 }
-
 .map-container .map-contact {
   position: absolute;
   top: 50%;
@@ -169,16 +153,13 @@ form {
   padding: 47px 52px 50px 52px;
   background: #fff;
 }
-
 .map-contact ul {
   list-style: none;
   padding-left: 40px;
 }
-
 .map-contact li {
   margin-bottom: 15px;
 }
-
 .map-contact .contact-list > li > i,
 .map-contact .contact-list > li > a > i {
   font-size: 25px;
@@ -189,11 +170,9 @@ form {
   text-align: center;
   padding-right: 5px;
 }
-
 .map-contact .email {
   white-space: nowrap;
 }
-
 .socials-list {
   line-height: 30px;
   list-style: none;
@@ -201,7 +180,6 @@ form {
   padding-top: 15px;
   margin-bottom: -8px;
 }
-
 .socials-list li {
   display: inline-block;
   margin-top: 4px;
@@ -210,7 +188,6 @@ form {
   font-size: 18px;
   vertical-align: middle;
 }
-
 .socials-list a {
   position: relative;
   display: block;
@@ -225,19 +202,15 @@ form {
   transition: all 0.3s ease;
   opacity: 0.7;
 }
-
 .socials-list .facebook a {
   background: #3a5897;
 }
-
 .socials-list .twitter a {
   background: #00aced;
 }
-
 .socials-list .google a {
   background: #db4437;
 }
-
 #success {
   position: absolute;
   top: -50%;
@@ -245,38 +218,31 @@ form {
   z-index: 999;
   background-color: transparent;
 }
-
 /**md and above**/
 @media (min-width: 992px) {
   #contactForm {
     /* margin-right: 5rem; */
   }
 }
-
 /**request tutor**/
 .form-check {
   min-width: 40%;
 }
-
 .form-group {
   margin-bottom: 0.5em;
 }
-
 .control-group {
   width: 100%;
 }
-
 .form-check-label {
   white-space: nowrap;
 }
-
 .group-outline {
   background: #fff;
   border: 1px solid #e6e6e6;
   padding: 9px 20px;
   margin-top: 20px;
 }
-
 .group-label {
   color: #535353;
   display: block;
@@ -284,61 +250,50 @@ form {
   font-size: 13px;
   font-weight: bold;
 }
-
 #contactForm .form-control::-webkit-input-placeholder {
   /* WebKit, Blink, Edge */
   color: #a7a7a7;
   font-style: italic;
   font-size: 16px;
 }
-
 #contactForm .form-control:-moz-placeholder {
   /* Mozilla Firefox 4 to 18 */
   color: #a7a7a7;
   font-style: italic;
 }
-
 #contactForm .form-control::-moz-placeholder {
   /* Mozilla Firefox 19+ */
   color: #a7a7a7;
   font-style: italic;
 }
-
 #contactForm .form-control:-ms-input-placeholder {
   /* Internet Explorer 10-11 */
   color: #a7a7a7;
   font-style: italic;
 }
-
 #contactForm .form-control::-ms-input-placeholder {
   /* Microsoft Edge */
   color: #a7a7a7;
   font-style: italic;
 }
-
 #contactForm .form-control::placeholder {
   color: #a7a7a7;
   font-style: italic;
 }
-
 .floating-label-form-group input,
 .floating-label-form-group textarea {
   margin-top: 8px;
 }
-
 .floating-label-form-group label {
   white-space: nowrap;
 }
-
 .narrow-form {
   max-width: 540px;
 }
-
 .form-check label {
   margin-right: 10px;
   font-size: 14px;
 }
-
 .request-popup {
   position: fixed;
   background: #fff;
@@ -352,7 +307,6 @@ form {
   -webkit-transition: all 1s ease;
   transition: all 1s ease;
 }
-
 .form-header {
   height: 30px;
   color: #ccc;
@@ -360,19 +314,16 @@ form {
   position: relative;
   padding-top: 10px;
 }
-
 .form-header h3 {
   font-size: 18px;
   float: left;
 }
-
 .form-header i {
   float: right;
   height: 18px;
   width: 18px;
   cursor: pointer;
 }
-
 @media (min-width: 768px) {
   .narrow-form {
     max-width: 720px;
