--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,20 @@
-html, body {
+.background-cover {
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+.body-font {
+  font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+html,
+body {
   font-size: 20px;
 }
-
 body {
   font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   color: #595959;
 }
-
 h1,
 h2,
 h3,
@@ -16,19 +24,16 @@ h6 {
   font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-weight: 700;
 }
-
 h1 {
   font-size: 2.1rem;
 }
-
 h4 {
   font-size: 1.2rem;
 }
-
 h2 {
   font-size: 1.8rem;
 }
-
+/*masthead*/
 header.masthead {
   position: relative;
   background-color: #343a40;
@@ -40,7 +45,6 @@ header.masthead {
   padding-bottom: 8rem;
   height: 650px;
 }
-
 header.masthead .overlay {
   position: absolute;
   background-color: rgba(1, 27, 58, 0.4);
@@ -50,23 +54,18 @@ header.masthead .overlay {
   left: 0;
   opacity: 0.3;
 }
-
 header.masthead h1 {
   font-size: 2rem;
 }
-
 header.masthead .contact-me {
   margin-bottom: 1em;
 }
-
 header.masthead .contact-me a {
   color: #fff;
 }
-
 header.masthead p {
   color: #fff;
 }
-
 @media (min-width: 768px) {
   header.masthead {
     padding-top: 10rem;
@@ -76,61 +75,53 @@ header.masthead p {
     font-size: 3rem;
   }
 }
-
+/*showcase*/
 .showcase .showcase-text {
   padding: 3rem;
 }
-
 .showcase .showcase-img {
   min-height: 30rem;
   background-size: cover;
 }
-
 @media (min-width: 768px) {
   .showcase .showcase-text {
     padding: 7rem;
   }
 }
-
+/*icons*/
 .features-icons {
   padding-top: 7rem;
   padding-bottom: 7rem;
 }
-
 .features-icons .features-icons-item {
   max-width: 20rem;
 }
-
 .features-icons .features-icons-item .features-icons-icon {
   height: 7rem;
 }
-
 .features-icons .features-icons-item .features-icons-icon i {
   font-size: 4.5rem;
 }
-
 .features-icons .features-icons-item:hover .features-icons-icon i {
   font-size: 5rem;
 }
-
+/*testimonials*/
 .testimonials {
   padding-top: 7rem;
   padding-bottom: 7rem;
 }
-
 .testimonials .testimonial-item {
   max-width: 18rem;
 }
-
 .testimonials .testimonial-item img {
   max-width: 12rem;
   box-shadow: 0px 5px 5px 0px #adb5bd;
 }
-
+/*call to action*/
 .call-to-action {
   position: relative;
   background-color: #343a40;
-  background: url("../img/bg-masthead.jpg") no-repeat center center;
+  background: url('../img/bg-masthead.jpg') no-repeat center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -138,7 +129,6 @@ header.masthead p {
   padding-top: 7rem;
   padding-bottom: 7rem;
 }
-
 .call-to-action .overlay {
   position: absolute;
   background-color: #212529;
@@ -148,26 +138,21 @@ header.masthead p {
   left: 0;
   opacity: 0.3;
 }
-
 /*nav*/
 .hidden {
   display: none;
 }
-
 .navbar {
   display: block;
 }
-
 .navbar i {
   font-size: 20px;
   margin-right: 0.8rem;
   color: #00aaff;
 }
-
 .navbar .tel i {
   font-size: 25px;
 }
-
 .navbar-holder {
   z-index: 999;
   margin-bottom: -147px;
@@ -175,55 +160,44 @@ header.masthead p {
   font-size: 18px;
   padding: 0;
 }
-
 .navbar-dark .navbar-nav .nav-link {
   color: #fff;
 }
-
 .navbar-holder a {
   color: #fff;
 }
-
 .navbar-brand {
   max-width: 20%;
   margin-left: -1rem;
 }
-
 .navbar-brand img {
   width: 200px;
 }
-
 .navbar-bottom {
   display: block;
   font-weight: bold;
   min-height: 25px;
   margin: 0px auto;
 }
-
 .navbar-bottom .nav-item {
   margin: 0 24px;
 }
-
 .navbar-dark .navbar-nav .active > .nav-link,
 .navbar-dark .navbar-nav .nav-link.active,
 .navbar-dark .navbar-nav .nav-link.show,
 .navbar-dark .navbar-nav .show > .nav-link {
   color: #00aaff;
 }
-
 .navbar-dark .navbar-nav .nav-link:focus,
 .navbar-dark .navbar-nav .nav-link:hover {
   color: #00aaff;
 }
-
 .navbar-nav.contact .nav-item {
   padding-right: 3em;
 }
-
 .bg-trans {
   background: transparent;
 }
-
 .navbar-top {
   font-size: 13px;
   background-color: #011b3a;
@@ -232,11 +206,20 @@ header.masthead p {
   margin: 0px auto;
   display: none;
 }
-
 .navbar-bottom {
   background-color: #011b3a;
 }
-
+#main-nav .dropdown-menu {
+  background-color: transparent;
+  color: #fff;
+  border: none;
+  font-weight: bold;
+}
+#main-nav .dropdown-item:focus,
+#main-nav .dropdown-item:hover {
+  background: transparent;
+  color: #00aaff;
+}
 @media (min-width: 768px) {
   .navbar-top {
     display: block;
@@ -244,26 +227,25 @@ header.masthead p {
   .navbar-bottom {
     background: transparent;
   }
+  #main-nav .dropdown-menu {
+    margin-left: -13em;
+  }
 }
-
 /*footer*/
 .footer {
   background: #011b3a;
   padding-bottom: 29px;
 }
-
 .widget {
   line-height: 26px;
   color: #fff;
 }
-
 .widget h4 {
   margin-bottom: 35px;
   font-weight: 300;
   line-height: 30px;
   color: rgba(255, 255, 255, 0.7);
 }
-
 .widget h4:after {
   content: "";
   display: block;
@@ -271,22 +253,18 @@ header.masthead p {
   border-bottom: 1px solid #650039;
   margin-top: 12px;
 }
-
 .widget img {
   width: 100%;
 }
-
 .img-cont {
   margin-bottom: 2rem;
 }
-
 .contact-details {
   font-size: 14px;
   list-style: none;
   padding-left: 0;
   margin-bottom: 0;
 }
-
 .contact-details li {
   overflow: hidden;
   text-overflow: ellipsis;
@@ -296,7 +274,6 @@ header.masthead p {
   line-height: 20px;
   color: #b2b2b2;
 }
-
 .contact-details li:before {
   color: #00aaff;
   font-family: FontAwesome;
@@ -313,38 +290,31 @@ header.masthead p {
   margin-right: 5px;
   content: "\f0ac";
 }
-
 .contact-details li.telephone:before {
   content: "\f095";
 }
-
 .contact-details li.email:before {
   content: "\f003";
 }
-
 .contact-details li.schedule:before {
   content: "\f017";
 }
-
 .footer .row.top {
   border-bottom: 1px solid rgba(255, 255, 255, 0.25);
   margin-bottom: 27px;
   padding-top: 46px;
   padding-bottom: 46px;
 }
-
 .footer .bottom {
   text-align: center;
   font-size: 13px;
   color: #808080;
   width: 100%;
 }
-
 .footer .bottom a {
   color: #fff;
   text-decoration: none;
 }
-
 /*ball rolling*/
 .ball-rolling .icon-box {
   margin-right: -10px;
@@ -354,18 +324,15 @@ header.masthead p {
   background: #fff;
   padding: 40px;
 }
-
 .ball-rolling .icon-box .icon {
   float: left;
   font-size: 61px;
 }
-
 .ball-rolling .icon-box .icon img {
   width: 1em;
   display: inline-block;
   height: auto;
 }
-
 .ball-rolling .icon-box .content {
   overflow: hidden;
   padding-left: 25px;
@@ -373,11 +340,9 @@ header.masthead p {
   font-size: 14px;
   line-height: 24px;
 }
-
 .ball-rolling .icon-box .content p {
   line-height: 24px;
 }
-
 .ball-rolling h4 {
   font-size: 20px;
   margin-top: -6px;
@@ -386,22 +351,18 @@ header.masthead p {
   line-height: 30px;
   min-height: 90px;
 }
-
 .feature .btn-blue {
   color: #011b3a;
   font-size: 13px;
 }
-
 .feature .btn-blue i {
   margin-left: 0.5rem;
   font-size: 16px;
 }
-
 .btn-blue .arrow {
   margin-left: 0.5rem;
   font-size: 16px;
 }
-
 .ball-rolling .step {
   position: absolute;
   bottom: -14px;
@@ -412,65 +373,54 @@ header.masthead p {
   color: #f8f8f8;
   line-height: 1;
 }
-
 .ball-rolling .desc {
   min-height: 168px;
 }
-
 .fees ul {
   list-style: none;
   margin-bottom: 0;
 }
-
 .fees-list {
   text-align: left;
   margin-bottom: 30px;
 }
-
 /*page*/
 .page-header {
-  padding-top: 221px;
+  padding-top: 8em;
   padding-bottom: 78px;
   position: relative;
   background-position: center center;
   background: #011b3a;
   background-size: cover;
 }
-
 .page-header h1 {
   font-weight: 300;
   color: #fff;
   margin-bottom: 33px;
 }
-
 .header-content {
   text-align: left;
 }
-
-.header-content .seperator, .seperator.left {
+.header-content .seperator,
+.seperator.left {
   margin-left: 0;
 }
-
 .breadcrumbs {
   line-height: 24px;
   font-size: 14px;
 }
-
 .breadcrumbs ul {
   list-style: none;
   color: #fff;
   padding-left: 0;
 }
-
 .breadcrumbs li {
   display: inline;
 }
-
 .breadcrumbs li a {
   color: #fff;
   text-decoration: none;
 }
-
 .breadcrumbs li:not(:last-child):after {
   content: '\003e';
   position: relative;
@@ -479,17 +429,14 @@ header.masthead p {
   padding-left: 8px;
   color: #fff;
 }
-
 .page-content {
   min-height: 520px;
   padding-top: 80px;
   padding-bottom: 100px;
 }
-
 .post ul {
   list-style: none;
 }
-
 .page-header .overlay {
   background-color: rgba(1, 27, 58, 0.8);
   position: absolute;
@@ -498,50 +445,42 @@ header.masthead p {
   width: 100%;
   height: 100%;
 }
-
-.post h2, .post h3, .post h4 {
+.post h2,
+.post h3,
+.post h4 {
   margin-bottom: 34px;
 }
-
 .img-left {
   float: left;
   width: 214px;
   margin: 5px 20px 20px 0;
 }
-
 .request-tutor {
   width: 90%;
   margin: auto;
 }
-
 .request-tutor .btn-blue {
   color: #011b3a;
 }
-
 aside.post {
   border: 2px solid #00aaff;
   padding-left: 15px;
   padding-right: 15px;
   padding-top: 35px;
 }
-
 .gray {
   background: #f8f9fa;
 }
-
 .bulleted ul {
   list-style: disc;
 }
-
 .img-wrapper img {
   width: 100%;
 }
-
 /*home*/
 .btn {
   border-radius: 0;
 }
-
 .btn-blue {
   background-color: #00aaff;
   border: 2px solid #00aaff;
@@ -554,41 +493,34 @@ aside.post {
   font-size: 16px;
   font-weight: 400;
 }
-
-.btn-blue:hover, .btn-blue:active {
+.btn-blue:hover,
+.btn-blue:active {
   color: #fff;
   background-color: #0062cc;
   border-color: #0062cc;
 }
-
 .masthead h1 {
   font-weight: 400;
 }
-
 .feature {
   position: relative;
 }
-
 .feature .container {
   padding-top: 3rem;
   padding-bottom: 3rem;
 }
-
 .feature h2 {
   margin-bottom: 34px;
   color: #011b3a;
 }
-
 .feature.bg-dark h2 {
   color: #fff;
 }
-
 p {
   margin-bottom: 30px;
   line-height: 30px;
   color: #595959;
 }
-
 .seperator {
   border-bottom: 2px solid #00aaff;
   margin-bottom: 41px;
@@ -597,34 +529,27 @@ p {
   margin-left: auto;
   margin-right: auto;
 }
-
 .bg-dark {
   color: #fff;
 }
-
 .icon-item {
   padding: 40px;
 }
-
 .icon-box {
   float: left;
 }
-
 .icon-box img {
   width: 61px;
 }
-
 .icon-box-content {
   padding-left: 25px;
   position: relative;
 }
-
 .advantages {
-  background-image: url("/img/children-working-together.jpg");
+  background-image: url('/img/children-working-together.jpg');
   background-size: cover;
   background-position-y: -60px;
 }
-
 .section-overlay {
   position: absolute;
   background-color: rgba(1, 27, 58, 0.8);
@@ -633,12 +558,10 @@ p {
   top: 0;
   left: 0;
 }
-
 /*search*/
 .search-form {
   position: relative;
 }
-
 .btn-search {
   position: absolute;
   top: 0;
@@ -653,21 +576,18 @@ p {
   z-index: 999;
   cursor: pointer;
 }
-
-.search-form .cse .gsc-search-button-v2, .search-form .gsc-search-button-v2 {
+.search-form .cse .gsc-search-button-v2,
+.search-form .gsc-search-button-v2 {
   display: none;
 }
-
 .search-form .gsc-input-box {
   background: none;
   border: none;
 }
-
 .search-form .gsc-search-box-tools .gsc-search-box .gsc-input {
   background-color: transparent !important;
   color: rgba(255, 255, 255, 0.5);
 }
-
 .search-form .gsc-search-box .gsc-input > input:focus,
 .search-form .gsc-input-box-focus {
   border: none;
@@ -676,15 +596,12 @@ p {
   box-shadow: none;
   outline: none;
 }
-
 .btn-search:focus {
   outline: none;
 }
-
 .btn-search i {
   color: rgba(255, 255, 255, 0.5);
 }
-
 .navbar-top .search .search-container {
   position: relative;
   float: right;
@@ -703,7 +620,6 @@ p {
   -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
 }
-
 .navbar-top .search .search-active {
   width: 255px;
   cursor: text;
@@ -711,72 +627,58 @@ p {
   padding-right: 50px;
   border-radius: 0;
 }
-
 .navbar-top .search input::-webkit-input-placeholder {
   /* WebKit, Blink, Edge */
   color: rgba(255, 255, 255, 0);
   /* opacity: 0.8;*/
 }
-
 .navbar-top .search input:-moz-placeholder {
   /* Mozilla Firefox 4 to 18 */
   color: rgba(255, 255, 255, 0);
 }
-
 .navbar-top .search input::-moz-placeholder {
   /* Mozilla Firefox 19+ */
   color: rgba(255, 255, 255, 0);
 }
-
 .navbar-top .search input:-ms-input-placeholder {
   /* Internet Explorer 10-11 */
   color: rgba(255, 255, 255, 0);
 }
-
 .navbar-top .search input::-ms-input-placeholder {
   /* Microsoft Edge */
   color: rgba(255, 255, 255, 0);
 }
-
 .navbar-top .search input::placeholder {
   color: rgba(255, 255, 255, 0);
 }
-
 .navbar-top .search input.search-active::-webkit-input-placeholder {
   /* WebKit, Blink, Edge */
   color: rgba(255, 255, 255, 0.5);
   /* opacity: 0.8;*/
 }
-
 .navbar-top .search input.search-active:-moz-placeholder {
   /* Mozilla Firefox 4 to 18 */
   color: rgba(255, 255, 255, 0.5);
 }
-
 .navbar-top .search input.search-active::-moz-placeholder {
   /* Mozilla Firefox 19+ */
   color: rgba(255, 255, 255, 0.5);
 }
-
 .navbar-top .search input.search-active:-ms-input-placeholder {
   /* Internet Explorer 10-11 */
   color: rgba(255, 255, 255, 0.5);
 }
-
 .navbar-top .search input.search-active::-ms-input-placeholder {
   /* Microsoft Edge */
   color: rgba(255, 255, 255, 0.5);
 }
-
 .navbar-top .search input.search-active::placeholder {
   color: rgba(255, 255, 255, 0.5);
 }
-
 /*forms*/
 form {
   margin-bottom: 2em;
 }
-
 .floating-label-form-group {
   font-size: 14px;
   position: relative;
@@ -784,7 +686,6 @@ form {
   padding-bottom: 0;
   border-bottom: 1px solid #dee2e6;
 }
-
 .floating-label-form-group input,
 .floating-label-form-group textarea {
   font-size: 1.5em;
@@ -797,12 +698,10 @@ form {
   background: none;
   box-shadow: none !important;
 }
-
 .floating-label-form-group input::-webkit-input-placeholder,
 .floating-label-form-group textarea::-webkit-input-placeholder {
   color: #868e96;
 }
-
 .floating-label-form-group label {
   font-size: 0.85em;
   line-height: 1.764705882em;
@@ -819,29 +718,23 @@ form {
   vertical-align: baseline;
   opacity: 0;
 }
-
 .help-block {
   margin: 15px 0;
 }
-
 .floating-label-form-group-with-value label {
   top: 0;
   opacity: 1;
 }
-
 .floating-label-form-group-with-focus label {
   color: #00aaff;
 }
-
 form .form-group:first-child .floating-label-form-group {
   border-top: 1px solid #dee2e6;
 }
-
 /*overrides*/
 .floating-label-form-group {
   border: none;
 }
-
 .floating-label-form-group input,
 .floating-label-form-group textarea {
   background: #fff;
@@ -850,34 +743,27 @@ form .form-group:first-child .floating-label-form-group {
   margin-bottom: 15px;
   margin-top: 15px;
 }
-
 .form-group .form-control:focus {
   border-color: #011b3a;
 }
-
 form {
   margin-bottom: 0;
 }
-
 .help-block {
   margin: 0;
   margin-top: -30px;
   margin-bottom: -30px;
 }
-
 .help-block ul {
   margin-bottom: 0;
 }
-
 .your-contact {
   margin-left: 2rem;
 }
-
 .your-contact h4 {
   margin-bottom: 0.5rem;
   margin-top: 0.5rem;
 }
-
 .your-contact ul {
   padding-left: 0;
   overflow: hidden;
@@ -885,11 +771,9 @@ form {
   font-size: 0.9rem;
   line-height: 1.8rem;
 }
-
 .your-contact li {
   overflow: hidden;
 }
-
 .your-contact i {
   font-size: 25px;
   width: 2rem;
@@ -897,23 +781,19 @@ form {
   font-weight: bold;
   text-align: center;
 }
-
 .your-contact i.fa-mobile-phone {
   font-size: 30px;
 }
-
 .your-contact .tel a,
 .map-contact .tel a {
   color: #595959;
   text-decoration: none;
 }
-
 .map {
   height: 482px;
   position: relative;
   overflow: hidden;
 }
-
 .map-overlay {
   position: absolute;
   width: 100%;
@@ -925,12 +805,10 @@ form {
   -webkit-transition: all 5s ease;
   transition: all 5s ease;
 }
-
 .map-container {
   position: relative;
   background: #fff;
 }
-
 .map-container .map-contact {
   position: absolute;
   top: 50%;
@@ -943,16 +821,13 @@ form {
   padding: 47px 52px 50px 52px;
   background: #fff;
 }
-
 .map-contact ul {
   list-style: none;
   padding-left: 40px;
 }
-
 .map-contact li {
   margin-bottom: 15px;
 }
-
 .map-contact .contact-list > li > i,
 .map-contact .contact-list > li > a > i {
   font-size: 25px;
@@ -963,11 +838,9 @@ form {
   text-align: center;
   padding-right: 5px;
 }
-
 .map-contact .email {
   white-space: nowrap;
 }
-
 .socials-list {
   line-height: 30px;
   list-style: none;
@@ -975,7 +848,6 @@ form {
   padding-top: 15px;
   margin-bottom: -8px;
 }
-
 .socials-list li {
   display: inline-block;
   margin-top: 4px;
@@ -984,7 +856,6 @@ form {
   font-size: 18px;
   vertical-align: middle;
 }
-
 .socials-list a {
   position: relative;
   display: block;
@@ -999,19 +870,15 @@ form {
   transition: all 0.3s ease;
   opacity: 0.7;
 }
-
 .socials-list .facebook a {
   background: #3a5897;
 }
-
 .socials-list .twitter a {
   background: #00aced;
 }
-
 .socials-list .google a {
   background: #db4437;
 }
-
 #success {
   position: absolute;
   top: -50%;
@@ -1019,38 +886,31 @@ form {
   z-index: 999;
   background-color: transparent;
 }
-
 /**md and above**/
 @media (min-width: 992px) {
   #contactForm {
     /* margin-right: 5rem; */
   }
 }
-
 /**request tutor**/
 .form-check {
   min-width: 40%;
 }
-
 .form-group {
   margin-bottom: 0.5em;
 }
-
 .control-group {
   width: 100%;
 }
-
 .form-check-label {
   white-space: nowrap;
 }
-
 .group-outline {
   background: #fff;
   border: 1px solid #e6e6e6;
   padding: 9px 20px;
   margin-top: 20px;
 }
-
 .group-label {
   color: #535353;
   display: block;
@@ -1058,61 +918,50 @@ form {
   font-size: 13px;
   font-weight: bold;
 }
-
 #contactForm .form-control::-webkit-input-placeholder {
   /* WebKit, Blink, Edge */
   color: #a7a7a7;
   font-style: italic;
   font-size: 16px;
 }
-
 #contactForm .form-control:-moz-placeholder {
   /* Mozilla Firefox 4 to 18 */
   color: #a7a7a7;
   font-style: italic;
 }
-
 #contactForm .form-control::-moz-placeholder {
   /* Mozilla Firefox 19+ */
   color: #a7a7a7;
   font-style: italic;
 }
-
 #contactForm .form-control:-ms-input-placeholder {
   /* Internet Explorer 10-11 */
   color: #a7a7a7;
   font-style: italic;
 }
-
 #contactForm .form-control::-ms-input-placeholder {
   /* Microsoft Edge */
   color: #a7a7a7;
   font-style: italic;
 }
-
 #contactForm .form-control::placeholder {
   color: #a7a7a7;
   font-style: italic;
 }
-
 .floating-label-form-group input,
 .floating-label-form-group textarea {
   margin-top: 8px;
 }
-
 .floating-label-form-group label {
   white-space: nowrap;
 }
-
 .narrow-form {
   max-width: 540px;
 }
-
 .form-check label {
   margin-right: 10px;
   font-size: 14px;
 }
-
 .request-popup {
   position: fixed;
   background: #fff;
@@ -1126,7 +975,6 @@ form {
   -webkit-transition: all 1s ease;
   transition: all 1s ease;
 }
-
 .form-header {
   height: 30px;
   color: #ccc;
@@ -1134,19 +982,16 @@ form {
   position: relative;
   padding-top: 10px;
 }
-
 .form-header h3 {
   font-size: 18px;
   float: left;
 }
-
 .form-header i {
   float: right;
   height: 18px;
   width: 18px;
   cursor: pointer;
 }
-
 @media (min-width: 768px) {
   .narrow-form {
     max-width: 720px;
