styles combined, styles generated

--- a/css/styles.css
+++ b/css/styles.css
@@ -352,7 +352,7 @@ header.masthead p {
   min-height: 90px;
 }
 .feature .btn-blue {
-  color: #011b3a;
+  color: #fff;
   font-size: 13px;
 }
 .feature .btn-blue i {
