fixes to ball-rolling css

--- a/css/ball-rolling.css
+++ b/css/ball-rolling.css
@@ -6,6 +6,7 @@
   position: relative;
   background: #fff;
   padding: 40px;
+  height: 100%;
 }
 .ball-rolling .icon-box .icon {
   float: left;
@@ -20,14 +21,19 @@
   overflow: hidden;
   padding-left: 25px;
   text-align: left;
-  font-size: 14px;
+  font-size: 16px;
   line-height: 24px;
+  height: 100%;
+}
+.ball-rolling .icon-box .content .btn {
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 2em;
 }
 .ball-rolling .icon-box .content p {
   line-height: 24px;
 }
 .ball-rolling h4 {
-  font-size: 20px;
   margin-top: -6px;
   margin-bottom: 12px;
   font-weight: 300;
@@ -66,4 +72,7 @@
 .fees-list {
   text-align: left;
   margin-bottom: 30px;
+}
+.col-inner {
+  height: 100%;
 }
