--- a/css/masthead.css
+++ b/css/masthead.css
@@ -15,9 +15,9 @@ header.masthead {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  background-position-y: -4em;
   padding-top: 8rem;
   padding-bottom: 8rem;
-  height: 650px;
 }
 header.masthead .overlay {
   position: absolute;
@@ -30,6 +30,7 @@ header.masthead .overlay {
 }
 header.masthead h1 {
   font-size: 2rem;
+  margin-bottom: 1.5rem;
 }
 header.masthead .contact-me {
   margin-bottom: 1em;
@@ -42,10 +43,10 @@ header.masthead p {
 }
 @media (min-width: 768px) {
   header.masthead {
-    padding-top: 10rem;
-    padding-bottom: 12rem;
+    padding-top: 9rem;
+    padding-bottom: 3rem;
   }
   header.masthead h1 {
-    font-size: 3rem;
+    font-size: 2rem;
   }
 }
