footer changed to have only 3 cols. Social media icons float right on small screens

--- a/css/social-media.css
+++ b/css/social-media.css
@@ -9,7 +9,7 @@
 .social-media .sm-container {
   width: 150px;
   position: relative;
-  margin: 0 auto;
+  float: right;
 }
 @media (min-width: 768px) {
   .social-media {
