--- a/css/footer.css
+++ b/css/footer.css
@@ -25,6 +25,10 @@
 }
 .img-cont {
   margin-bottom: 2rem;
+  height: auto;
+}
+.img-cont.sml {
+  height: 70px;
 }
 .contact-details {
   font-size: 14px;
@@ -81,4 +85,15 @@
 .footer .bottom a {
   color: #fff;
   text-decoration: none;
+}
+@media (min-width: 768px) {
+  .widget img {
+    height: 100%;
+    width: auto;
+  }
+  .img-cont {
+    margin-bottom: 2rem;
+    height: 100px;
+    width: auto;
+  }
 }
