home page changed

--- a/css/masthead.css
+++ b/css/masthead.css
@@ -11,6 +11,8 @@
 header.masthead {
   position: relative;
   background-color: #343a40;
+  background-repeat: no-repeat;
+  background-position: center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
