--- a/css/home.css
+++ b/css/home.css
@@ -43,7 +43,8 @@
   margin-bottom: 34px;
   color: #011b3a;
 }
-.feature.bg-dark h2 {
+.feature.bg-dark h2,
+.feature.bg-dark p {
   color: #fff;
 }
 p {
@@ -77,8 +78,12 @@ p {
 }
 .advantages {
   background-image: url('/img/children-working-together.jpg');
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
-  background-position-y: -60px;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 .section-overlay {
   position: absolute;
