update social share buttons

--- a/css/social-media.css
+++ b/css/social-media.css
@@ -129,6 +129,10 @@
   background: #430297;
   color: white;
 }
+.fa-whatsapp {
+  background: #43d854;
+  color: white;
+}
 .fa-soundcloud {
   background: #ff5500;
   color: white;
